<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.rnk.security</groupId>
    <artifactId>rnkrealm</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>

    <!-- <groupId>com.tadamski.glassfish</groupId>
    <artifactId>mongo-realm</artifactId>
    <version>1.0.0-beta-4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>api</module>
        <module>module</module>
    </modules> -->
    
    <name>${project.artifactId}</name>
    <description>Rnk specific realm</description>
    <url>http://example.com</url>
    <developers>
        <developer>
            <id>dJabber</id>
            <name>dJabber</name>
            <email>djabber@gmail.com</email>
            <url>http://example.com</url>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>No License</name>
        </license>
    </licenses>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <encoding>UTF-8</encoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.glassfish.main.security</groupId>
            <artifactId>security</artifactId>
            <version>5.0</version>
            <scope>system</scope>
            <systemPath>/opt/payara5/glassfish/modules/security.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.glassfish.main.security</groupId>
            <artifactId>security-ee</artifactId>
            <version>5.0</version>
            <scope>system</scope>
            <systemPath>/opt/payara5/glassfish/modules/security-ee.jar</systemPath>
        </dependency>
    </dependencies>
    <build>
        <!-- <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>2.1</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement> -->
        <plugins>
            <!-- <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin> -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <!-- <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles> -->
</project>